styles/mainpage.css
/* * {
    border: 2px red solid;
} */

body {
    background-color: #e0dfdf;
}

img {
    height: 100%;
    width: auto;
}

h1 {
    font-size: 100px;
    text-align: center;
    margin-top: 10px;
    margin-bottom: 0px;
}

/* 
Recipe card styling
*/

.recipeCardContainer {
    display: flex;

}

.recipeImage {
    width: 205px;
    height: 245px;
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
}

